--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,11 @@
 	--basic-periwinkle-craiola: #F3F7F9;
 	--basic-beige: #F9F5F0;
 	--basic-twitter-color: #3BBCE3;
-	--basic-dark-green: #63A63E;
+	--basic-middle-green: #63A63E;
 	--basic-grandma-apples: #8ED78F;
 	--basic-dark-green: #518534;
+	--basic-light-green :#5FBB2D;
+	--basic-shiny-green: #367315;
 	--basic-blue-craiola: #B7BFC8;
 	--basic-light-plum: #DC91D8;
 	--basic-shiny-orange: #FFBF47;
@@ -28,6 +30,7 @@
 	--basic-pearl-white: #F7F3EC;
 	--basic-pale-blue: #D7DCDE;
 	--basic-dark-black: #161D29;
+	--basic-light-grey: #F4F4F4;
 }
 
 @font-face {
@@ -85,6 +88,7 @@ body {
 	min-width: 960px;
 	margin: 0;
 	padding: 0;
+	position: relative;
 }
 
 a {
@@ -143,17 +147,32 @@ img {
 .sorting-button-up,
 .sorting-button-dwn,
 .continius-order,
-.order-close {
+.order-close,
+.feed-back-submit {
 	padding: 0;
 	border: none;
 	outline-color: var(--basic-black);
+}
+
+.feed-back-submit {
+	margin-top: 37px;
+	width: 460px;
+	min-height: 38px;
+	margin-top: 37px;
+	margin-bottom: 37px;
+	background-color: var(--basic-carmine-pink);
+}
+
+.wrap-feed-back, .wrap-store-button {
+	width: 620px;
+	background-color: var(--basic-light-grey);
 }
 
 .search-button {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	width: 220px;
-	border: 1px solid var(--basic-gainsborough);
+	border: 1px solid var(--basic-carmine-pink);
 	margin-top: 12px;
 }
 
@@ -205,13 +224,18 @@ img {
 	margin-top: 23px;
 }
 
-.feed-back-button:active {
+.feed-back-button:active,
+.feed-back-submit:active {
 	outline: none;
 }
 
 .log-in {
 	width: 121px;
 	margin-right: 10px;
+}
+
+.log-in:focus, .registration:focus {
+	outline: none;
 }
 
 .log-in:hover,
@@ -262,9 +286,10 @@ img {
 	padding-left: 42px;
 }
 
-.nav-menu .ul-style:last-child {
-	margin-right: 47px;
+.nav-menu {
+	min-height: inherit;
 }
+
 .ul-style {
 	display: flex;
 	justify-content: space-between;
@@ -298,12 +323,128 @@ img {
 	background-color: var( --basic-periwinkle-craiola);
 }
 
+.main-nav li {
+	min-height: inherit;
+	line-height: 60px;
+	text-align: center;
+}
+
 .map-widget {
-	display: none;
+	position: fixed;
+	top: 20%;
+	left: 0;
+	right: 0;
+	width: 943px;
+	margin: auto;
+}
+
+.map-widget iframe {
+	border: none;
 }
 
 .feedback-popup {
-	display: none;
+	position: fixed;
+	top: 20%;
+	left: 0;
+	right: 0;
+	margin: auto;
+	width: 620px;
+	background-color: var(--basic-white);
+	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
+}
+
+.wrap-feedback-popup {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	border-top: 7px solid var(--basic-carmine-pink);
+	text-align: center;
+}
+
+.wrap-feedback-popup form {
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 39px;
+}
+
+.wrap-input-name, .wrap-input-text {
+	margin-left: 80px;
+}
+
+.wrap-input-mail {
+	margin-left: 20px;
+}
+
+.wrap-input-name, .wrap-input-mail, .wrap-input-text {
+	display: inline-block;
+	width: 220px;
+	text-align: left;
+
+}
+
+.input-name, .input-mail {
+	border: 2px solid var(--basic-silver);
+	border-radius: 2px;
+	width: 212px;
+	min-height: 32px;
+}
+
+.wrap-input-name label, 
+.wrap-input-mail label{
+	display: inline-block;
+}
+
+.wrap-input-name label, 
+.wrap-input-mail label, 
+.wrap-input-text label {
+	font-family: "Cuprum", Arial, sans-serif;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 24px;
+	padding-bottom: 11px;
+}
+
+.wrap-input-text {
+	display: inline-block;
+	width: 460px;
+	margin-top: 13px;
+	margin-bottom: 32px;
+}
+
+.input-text {
+	width: 452px;
+	min-height: 106px;
+	border: 2px solid var(--basic-silver);
+	border-radius: 2px;
+	resize: none;
+	margin-top: 11px;
+}
+
+.input-name::placeholder, 
+.input-mail::placeholder, 
+.input-text::placeholder {
+	font-family: "PT Sans", Arial, sans-serif;
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 24px;
+	padding-top: 7px;
+	padding-left: 8px;
+}
+
+.input-text::placeholder {
+	padding-top: 2px;
+}
+
+.feed-back-close, .map-close, .order-close {
+	order: -1;
+	position: absolute;
+	right: 11px;
+	top: 12px;
+	width: 21px;
+	height: 21px;
+	background-image: url(../img/icon_close.svg);
+	background-color: var(--basic-white);
+	cursor: pointer;
 }
 
 .feedback-info {
@@ -398,11 +539,13 @@ img {
 	opacity: 0.3;
 }
 
-.user-panel-login:hover::before, .user-panel-logout:hover::before {
+.user-panel-login:hover::before, 
+.user-panel-logout:hover::before {
 	opacity: 1;
 }
 
-.user-panel-login:active::before, .user-panel-logout:active::before {
+.user-panel-login:active::before, 
+.user-panel-logout:active::before {
 	opacity: 0.3;
 }
 
@@ -485,8 +628,8 @@ img {
 	position: relative;
 	padding-top: 9px;
 	padding-bottom: 9px;
-	padding-left: 36px;
-	margin-left: 26px;
+	padding-left: 35px;
+	margin-left: 28px;
 }
 
 .user-store-basket::before {
@@ -523,7 +666,7 @@ img {
 	background-color: var( --basic-dark-green);
 	text-align: center;
 	padding-top: 10px;
-	margin-left: 1px;
+	padding-left: 2px;
 }
 
 .checkout-main-panel:active {
@@ -602,6 +745,7 @@ img {
 .search-field input:focus {
 	color: var(--basic-black);
 	background-color: var(--basic-white);
+	outline: none;
 }
 
 .input-background:focus + svg path{
@@ -662,15 +806,27 @@ img {
 .main-nav {
 	background-color: var(--basic-purple-blue);
 	width: 940px;
-	padding-top: 18px;
-	padding-bottom: 18px;
+	min-height: 60px;
+	/* padding-top: 18px;
+	padding-bottom: 18px; */
 	margin: 0 auto;
 	margin-top: 5px;
 	margin-bottom: 60px;
 }
 
+.main-nav li:first-child a {
+	padding-left: 52px;
+}
+
+.main-nav  li:last-child a{
+	padding-right: 47px;
+}
+
 .main-nav a {
+	display: block;
 	color: var(--basic-white);
+	padding-left: 27px;
+	padding-right: 25px;
 }
 
 .main-nav a:hover {
@@ -683,10 +839,11 @@ img {
 }
 
 .main-nav .ul-style {
+	min-height: inherit;
 	margin-top: 0;
 	margin-bottom: 0;
-	margin-left: 52px;
-	margin-right: 47px;
+	/* margin-left: 52px;
+	margin-right: 47px; */
 }
 
 .promo-block h3 {
@@ -927,7 +1084,48 @@ img {
 }
 
 .store-basket {
-	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	margin-left: 408px;
+	width: 620px;
+	background-color: var(--basic-white);
+	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
+}
+
+.store-basket p {
+	font-family: "Cuprum", Arial, sans-serif;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 30px;
+	color: var(--basic-black);
+	margin-top: 66px;
+	margin-bottom: 67px;
+}
+
+.store-basket p::before {
+	position: absolute;
+	width: 66px;
+	height: 66px;
+	content: "";
+	top: 47px;
+	left: 81px;
+	background-image: url(../img/icon_mark.jpg);
+}
+
+.wrap-store-basket {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	border-top: 7px solid var(--basic-carmine-pink);
+	text-align: center;
+}
+
+.wrap-store-button {
+	width: 620px;
+	background-color: var(--basic-light-grey);
 }
 
 .bread-crumbs {
@@ -1009,7 +1207,7 @@ img {
 }
 
 .filter h2 {
-	width: 220px;
+	width: 202px;
 	margin: 0;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -1027,7 +1225,6 @@ img {
 	font-weight: 400;
 }
 
-.filter h2,
 .sorting h2 {
 	margin-top: 0;
 	margin-bottom: 0;
@@ -1042,8 +1239,6 @@ img {
 }
 
 .product-cards article {
-	background-image: url(../img/label_new_products.jpg);
-	background-repeat: no-repeat;
 	border: 1px solid #EAEAEA;
 	box-sizing: border-box;
 	width: 220px;
@@ -1076,22 +1271,42 @@ img {
 
 .button-buy,
 .to-bookmarks {
+	display: block;
 	font-family: "Cuprum", Arial, sans-serif;
 	font-weight: 400;
 	font-size: 14px;
 	line-height: 18px;
 	text-transform: uppercase;
+	width: 135px;
+	min-height: 38px;
+	margin-left: 41px;
+	margin-right: 44px;
 }
 
 .button-buy {
+	position: relative;
 	color: var(--basic-white);
-	background-color: var(--basic-dark-green);
-	background-image: url(../img/inv.png);
-	background-repeat: no-repeat;
+	background-color: var(--basic-middle-green);
+	margin-top: 38px;
+	padding-left: 9px;
+	box-shadow: inset 0px -3px 0px var(--basic-shiny-green);
+	border-radius: 2px;
+}
+
+.button-buy::after {
+	position: absolute;
+	top: 10px;
+	left: 30px;
+	content: "";
+	width: 15px;
+	height: 15px;
+	background-image: url(../img/inv.svg);
+  background-repeat: no-repeat;
+  opacity: 0.3;
 }
 
 .button-buy:hover {
-	background-color: var(--basic-grandma-apples);
+	background-color: var(--basic-light-green);
 }
 
 .button-buy:active {
@@ -1099,19 +1314,25 @@ img {
 	background-color: var(--basic-dark-green);
 }
 
+.button-buy:focus, .to-bookmarks:focus {
+	outline: none;
+}
+
 .to-bookmarks {
 	color: var(--basic-purple-blue);
 	background-color: var(--basic-white);
-	border: 2px solid var(--basic-dark-green);
+	border: 3px solid var(--basic-dark-green);
+	margin-top: 10px;
+	padding-right: 2px;
 }
 
 .to-bookmarks:hover {
-	border: 2px solid var( --basic-purple-blue);
+	border: 3px solid var( --basic-purple-blue);
 }
 
 .to-bookmarks:active {
 	outline: none;
-	border: 2px solid rgba(0, 0, 0, 0.28);
+	border: 3px solid rgba(0, 0, 0, 0.28);
 	opacity: 0.5;
 }
 
@@ -1161,7 +1382,7 @@ img {
 	width: 38px;
 	min-height: 38px;
 	border: 1px solid var(--basic-gainsborough);
-	border-radius: 2px;
+	border-radius: 5px;
 	text-align: center;
 	vertical-align: middle;
 	line-height: 38px;
@@ -1169,27 +1390,17 @@ img {
 
 .page-navigation li:last-child {
 	width: 140px;
-	min-height: 38px;
-	border: 1px solid var(--basic-gainsborough);
-	border-radius: 2px;
-	text-align: center;
-	vertical-align: middle;
-	line-height: 38px;
 }
 
 .page-navigation li:hover {
 	border: 1px solid var(--basic-silver);
 	background: var(--basic-white);
-	border-radius: 2px;
+	
 }
 
 .page-navigation li:active {
 	border: 1px solid var(--basic-carmine-pink);
-	border-radius: 2px;
-}
-
-.page-navigation li:first-child {
-	background: var(--basic-carmine-pink);
+	
 }
 
 .manufacturers {
@@ -1202,7 +1413,7 @@ img {
 	width: 220px;
 	display: block;
 	text-align: center;
-	line-height: 145px;
+	line-height: 143px;
 }
 
 .popular-manufacturers img {
@@ -1223,6 +1434,7 @@ img {
 	padding-left: 39px;
 	padding-right: 39px;
 	margin-right: 18px;
+	margin-top: 3px;
 }
 
 .company-details {
@@ -1238,7 +1450,11 @@ img {
 .all-popular-manufacturers,
 .all-popular-products,
 .company-details,
-.feed-back-button {
+.feed-back-button,
+.feed-back-submit,
+.compl-store,
+.continius-order,
+.request-link {
 	font-family: "Cuprum", Arial, sans-serif;
 	font-weight: 400;
 	font-size: 14px;
@@ -1252,7 +1468,9 @@ img {
 .all-popular-manufacturers:hover,
 .all-popular-products:hover,
 .company-details:hover,
-.feed-back-button:hover {
+.feed-back-button:hover,
+.feed-back-submit:hover,
+.request-link:hover {
 	background-color: var(--basic-cream-red);
 }
 
@@ -1260,7 +1478,9 @@ img {
 .all-popular-manufacturers:active,
 .all-popular-products:active,
 .company-details:active,
-.feed-back-button:active {
+.feed-back-button:active,
+.feed-back-submit:active,
+.request-link:active {
 	background-color: var(--basic-dark-red);
 }
 
@@ -1270,10 +1490,6 @@ img {
 	background-image: url(../img/icon_materials.png);
 	background-repeat: no-repeat;
 	background-position: 213px;
-	/* margin-left: 0;
-	margin-top: 10px;
-	margin-right: 10px;
-	margin-bottom: 10px; */
 }
 
 .materials-cards  h3, 
@@ -1331,8 +1547,7 @@ img {
 }
 
 .drills-cards {
-	width: 620px;
-	min-height: 266px;
+	position: relative;
 	background-image: url(../img/background_drill_slider.jpg);
 }
 
@@ -1390,7 +1605,10 @@ img {
 
 .drills-cards {
 	display: none;
-	margin: 10px;
+	grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-end: 4;
+  grid-row-start: 2;
 }
 
 .rotary-hammers-slider {
@@ -1455,7 +1673,7 @@ img {
 
 .services {
 	background-color: var(--basic-periwinkle-craiola);
-	margin-top: 75px;
+	margin-top: 70px;
 }
 
 .services p {
@@ -1493,8 +1711,10 @@ img {
 }
 
 .services-list p {
+	width: 220px;
+	display: inline-block;
 	padding-left: 20px;
-	padding-top: 12px;
+	padding-top: 16px;
 	font-weight: 700;
 	font-size: 21px;
 	line-height: 30px;
@@ -1516,6 +1736,7 @@ img {
 }
 
 .services-list li:hover {
+	color: var(--basic-white);
 	background-color: var(--basic-night-blue);
 }
 
@@ -1537,7 +1758,7 @@ img {
 	left: -38px;
 }
 
-.services-delivery {
+.services-head {
 	display: inline-block;
 	font-family: "Cuprum", Arial, sans-serif;
 	font-weight: 400;
@@ -1560,6 +1781,7 @@ img {
 .wrap-services {
 	display: flex;
 	padding-bottom: 100px;
+	width: 960px;
 }
 
 .list-couriers  {
@@ -1575,6 +1797,7 @@ img {
 .wrap-company-description {
 	display: flex;
 	justify-content: space-between;
+	margin-top: 3px;
 	margin-bottom: 70px;
 }
 
@@ -1599,7 +1822,9 @@ img {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	padding-left: 40px;
+	margin-left: 20px;
+	padding-left: 20px;
+	width: 680px;
 }
 
 .product-cards {
@@ -1626,7 +1851,7 @@ img {
 }
 
 .sorting-button-dwn {
-	margin-right: 37px;
+	margin-right: 18px;
 }
 
 .sorting-button-up .sorting-icon {
@@ -1655,12 +1880,25 @@ img {
 	list-style-type: none;
 	min-height: inherit;
 	padding: 0;
-	margin-left: 20px;
-	margin-top: 33px;
+	margin-top: 30px;
+	margin-bottom: 15px;
+	margin-left: 19px;
 }
 
 .ul-page-nav li {
 	margin-right: 8px;
+}
+
+.page-link {
+	display: block;
+	color: var(--basic-black);
+	width: inherit;
+	min-height: inherit;
+}
+
+.page-navigation-active {
+	color: var(--basic-white);
+	background: var(--basic-carmine-pink);
 }
 
 .wrap-about-rotary {
@@ -1668,7 +1906,7 @@ img {
 }
 
 .about-rotary {
-    padding-bottom: 68px;
+	margin-bottom: 69px;
 }
 
 .service-description-second {
@@ -1676,13 +1914,50 @@ img {
 	margin-bottom: 0;
 }
 
-.services-delivery-section {
+.services-section {
 	width: 619px;
 	min-width: 283px;
 	margin-left: auto;
+}
+
+.services-delivery-section {
+	margin-left: 80px;
 	background-image: url(../img/service_delivery_background.png);
 	background-position: 150px 89px;
 	background-repeat: no-repeat;
+}
+
+.services-guarant-section {
+	display: none;
+	width: 628px;
+	margin-left: 80px;
+	background-image: url(../img/service_garant_background.png);
+	background-position: 240px 68px;
+	background-repeat: no-repeat;
+}
+
+.services-guarant-section .services-head {
+	margin-top: 70px;
+	margin-bottom: 25px;
+}
+
+.services-credit-section {
+	display: none;
+	margin-left: 80px;
+	background-image: url(../img/service_credit_background.png);
+	background-position: 165px 70px;
+	background-repeat: no-repeat;
+}
+
+.request-link {
+	display: inline-block;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 45px;
+	padding-right: 39px;
+	width: 111px;
+	margin-top: 26px;
+
 }
 
 .list-manufacturers {
@@ -1706,14 +1981,14 @@ img {
 	position: absolute;
   display: block;
   width: 24px;
-  height: 24px;
+	height: 24px;
 }
 
 .list-manufacturers input[type=radio] {
 	position: absolute;
   display: block;
   width: 24px;
-  height: 24px;
+	height: 24px;
 }
 
 .list-manufacturers input[type=checkbox]+label {
@@ -1745,8 +2020,18 @@ img {
 	background-image: url(../img/checkbox_off.jpg);
 }
 
+.list-manufacturers input[type=checkbox]:focus+label::before {
+	outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
 .list-manufacturers input[type=checkbox]:checked+label::before {
 	background-image: url(../img/checkbox_on.jpg);
+}
+
+.list-manufacturers input[type=checkbox]:checked:focus+label::before {
+	outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
 }
 
 .list-manufacturers input[type=checkbox]:checked+label:hover::before {
@@ -1755,6 +2040,27 @@ img {
 
 .list-manufacturers input[type=checkbox]+label:hover::before {
 	background-image: url(../img/checkbox_off_hover.png);
+}
+
+.list-manufacturers input[type=checkbox]:disabled:checked+label::before {
+	background-image: url(../img/checkbox_on_hover.png);
+}
+
+.list-manufacturers input[type=checkbox]:disabled:checked+label {
+	opacity: 0.3;
+}
+
+.list-manufacturers input[type=checkbox]:disabled+label::before {
+	background-image: url(../img/checkbox_off_hover.png);
+}
+
+.list-manufacturers input[type=checkbox]:disabled+label {
+	opacity: 0.3;
+}
+
+.list-manufacturers input[type=radio]:focus+label::before {
+	outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
 }
 
 .list-manufacturers input[type=radio]+label::before {
@@ -1770,6 +2076,14 @@ img {
 	background-image: url(../img/radio_off.svg);
 }
 
+.list-manufacturers input[type=radio]:disabled+label::before {
+	background-image: url(../img/radio_off.svg);
+}
+
+.list-manufacturers input[type=radio]:disabled:checked+label::before {
+	background-image: url(../img/radio_on.svg);
+}
+
 .list-manufacturers input[type=radio]:checked+label::before {
 	background-image: url(../img/radio_on.svg);
 }
@@ -1780,6 +2094,14 @@ img {
 
 .list-manufacturers input[type=radio]:checked+label:hover::before {
 	background-image: url(../img/radio_on_hover.png);
+}
+
+.list-manufacturers input[type=radio]:disabled:checked+label {
+	opacity: 0.3;
+}
+
+.list-manufacturers input[type=radio]:disabled+label {
+	opacity: 0.3;
 }
 
 .range-wrap {
@@ -1870,10 +2192,6 @@ img {
 	text-align: center;
 }
 
-.wrap-log-info {
-
-}
-
 .wrap-cont-number {
 	width: 265px;
 	margin-top: 11px;
@@ -1920,6 +2238,11 @@ img {
 	display: inline-block;
 	width: 10px;
 	height: 10px;
+}
+
+.wrap-slider-radio input[type=radio]:focus+label::before {
+	outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
 }
 
 .wrap-slider-radio input[type=radio]+label::before {
@@ -1986,7 +2309,7 @@ img {
 }
 
 .product-cards article {
-	margin-bottom: 17px;
+	margin-bottom: 18px;
 	min-height: 318px;
 }
 
@@ -2029,15 +2352,22 @@ img {
 .sortinf-price, .sorting-type, .sortinf-function {
 	color: var(--basic-black);
 	opacity: 0.3;
-	text-decoration: underline dotted var(--basic-carmine-pink);
+	border-bottom: 2px dotted var(--basic-carmine-pink);
 	text-transform: uppercase;
 	font-size: 13px;
 	line-height: 18px;
 }
 
+.sortinf-price-active:hover, 
+.sorting-type:hover, 
+.sortinf-function:hover {
+	opacity: 1;
+	border-bottom: 2px solid var(--basic-carmine-pink);
+}
+
 .sortinf-price-active {
 	color: var(--basic-carmine-pink);
-	text-decoration: none;
+	border-bottom: 2px dotted rgba(255, 255, 255, 0.1);
 	opacity: 1;
 }
 
@@ -2079,7 +2409,7 @@ img {
 }
 
 .head-about {
-	padding-top: 64px;
+	padding-top: 63px;
 	padding-bottom: 23px;
 	padding-left: 0;
 }
@@ -2112,8 +2442,8 @@ img {
 }
 
 .sections-headline-services {
-	padding-top: 60px;
-	padding-bottom: 26px;
+	padding-top: 62px;
+	padding-bottom: 24px;
 	padding-left: 0;
 }
 
@@ -2121,4 +2451,45 @@ img {
 	padding-top: 55px;
 	padding-bottom: 10px;
 	padding-left: 0;
+}
+
+.product-cards article:hover .wrap-img {
+	display: none;
+}
+
+.product-cards article:hover .buy-popup {
+	display: block;
+	width: 220px;
+	min-height: 170px;
+  text-align: center;
+	line-height: 170px;
+	order: -1;
+}
+
+.compl-store, .continius-order {
+	display: inline-block;
+	width: 192px;
+	padding-top: 11px;
+	padding-bottom: 9px;
+	margin-top: 37px;
+	margin-bottom: 36px;
+}
+
+.compl-store {
+	margin-right: 5px;
+	padding-left: 2px;
+}
+
+.continius-order {
+	color: var(--basic-black);
+	background-color: var(--basic-white);
+	cursor: pointer;
+}
+
+.show {
+	display: block;
+}
+
+.hide {
+	display: none;
 }
