--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@
 	--basic-dark-black: #161D29;
 	--basic-light-grey: #F4F4F4;
 	--basic-sleep-blue: #405069;
+	--basic-beaver: #927F6E;
+	--basic-pink-ebony: #684B3E;
 }
 
 @font-face {
@@ -225,8 +227,9 @@ img {
 }
 
 .feed-back-button {
-	padding-left: 61px;
-	padding-right: 61px;
+	display: block;
+	padding-left: 62px;
+	padding-right: 60px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-top: 23px;
@@ -287,6 +290,7 @@ img {
 }
 
 .input-background {
+	padding-top: 2px;
 	background-color: transparent;
 	padding-left: 42px;
 }
@@ -337,27 +341,12 @@ img {
 }
 
 .map-widget {
-	position: fixed;
-	top: 20%;
-	left: 0;
-	right: 0;
 	width: 943px;
-	margin: auto;
+	height: 449px;
 }
 
 .map-widget iframe {
 	border: none;
-}
-
-.feedback-popup {
-	position: fixed;
-	top: 20%;
-	left: 0;
-	right: 0;
-	margin: auto;
-	width: 620px;
-	background-color: var(--basic-white);
-	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
 }
 
 .wrap-feedback-popup {
@@ -614,8 +603,8 @@ img {
 	width: 83px;
 	min-height: 24px;
 	position: relative;
-	padding-top: 9px;
-	padding-bottom: 9px;
+	padding-top: 10px;
+	padding-bottom: 8px;
 	padding-left: 43px;
 	padding-right: 24px;
 }
@@ -646,8 +635,8 @@ img {
 	width: 80px;
 	min-height: 24px;
 	position: relative;
-	padding-top: 9px;
-	padding-bottom: 9px;
+	padding-top: 10px;
+	padding-bottom: 8px;
 	padding-left: 49px;
 	padding-right: 20px;
 }
@@ -680,6 +669,9 @@ img {
 	min-height: 42px;
 	border: 0;
 }
+
+input[type="search"]::-moz-placeholder { color: var(--basic-white); }
+input[type="search"]::-webkit-input-placeholder { color: var(--basic-white); }
 
 .checkout-main-panel {
 	width: 115px;
@@ -734,8 +726,8 @@ img {
 	width: 19px;
 	height: 19px;
 	position: absolute;
-	top: 5px;
-	left: -33px;
+	top: 3px;
+	left: -35px;
 	background-image: url(../img/icon_phone.png);
 	background-repeat: no-repeat;
 }
@@ -1096,25 +1088,40 @@ img {
 }
 
 .footer-nav .ul-style {
-	margin-top: 36px;
+	margin-top: 38px;
 	margin-left: 53px;
 }
 
 .footer-services {
 	margin-left: 76px;
+	margin-top: 16px;
 }
 
 .footer-services a {
 	color: var(--basic-pale-orange-yellow);
 }
 
-.store-basket {
+.modal {
 	position: fixed;
-	top: 20%;
+	top: 0;
 	left: 0;
 	right: 0;
+	bottom: 0;
 	margin: auto;
+}
+
+.feedback-popup {
+	top: 28%;
 	width: 620px;
+	bottom: auto;
+	background-color: var(--basic-white);
+	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
+}
+
+.store-basket {
+	top: 35%;
+	width: 620px;
+	bottom: auto;
 	background-color: var(--basic-white);
 	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.75);
 }
@@ -1165,7 +1172,7 @@ img {
 	display: block;
 	width: 14px;
 	height: 12px;
-	background-image: url(../img/icon_home.jpg);
+	background-image: url(../img/icon_home.svg);
 }
 
 .bread-crumbs a {
@@ -1299,7 +1306,6 @@ img {
 
 .button-buy,
 .to-bookmarks {
-	display: block;
 	font-family: "Cuprum", Arial, sans-serif;
 	font-weight: 400;
 	font-size: 14px;
@@ -1312,11 +1318,15 @@ img {
 }
 
 .button-buy {
+	width: 120px;
+	padding-left: 14px;
+	line-height: 38px;
+	display: inline-block;
+	vertical-align: middle;
 	position: relative;
 	color: var(--basic-white);
 	background-color: var(--basic-middle-green);
 	margin-top: 38px;
-	padding-left: 9px;
 	box-shadow: inset 0px -3px 0px var(--basic-shiny-green);
 	border-radius: 2px;
 }
@@ -1324,7 +1334,7 @@ img {
 .button-buy::after {
 	position: absolute;
 	top: 10px;
-	left: 30px;
+	left: 29px;
 	content: "";
 	width: 15px;
 	height: 15px;
@@ -1348,6 +1358,7 @@ img {
 }
 
 .to-bookmarks {
+	display: block;
 	color: var(--basic-purple-blue);
 	background-color: var(--basic-white);
 	border: 3px solid var(--basic-dark-green);
@@ -1545,7 +1556,7 @@ img {
 	background-color: var(--basic-twitter-color);
 	background-image: url(../img/icon_tool.png);
 	background-repeat: no-repeat;
-	background-position: 194px;
+	background-position: 194px 33px;
 }
 
 .equipment-cards {
@@ -1572,11 +1583,13 @@ img {
 .rotary-hammers-slider {
 	position: relative;
 	background-image: url(../img/background_punch_slider.jpg);
+	background-color: var(--basic-beaver);
 }
 
 .drills-cards {
 	position: relative;
 	background-image: url(../img/background_drill_slider.jpg);
+	background-color: var(--basic-pink-ebony);
 }
 
 .page {
@@ -2058,7 +2071,7 @@ img {
 	position: absolute;
 	left: 0;
 	top: 0;
-	background-image: url(../img/checkbox_off.jpg);
+	background-image: url(../img/checkbox_off.png);
 }
 
 .list-manufacturers input[type=checkbox]:focus+label::before {
@@ -2067,7 +2080,7 @@ img {
 }
 
 .list-manufacturers input[type=checkbox]:checked+label::before {
-	background-image: url(../img/checkbox_on.jpg);
+	background-image: url(../img/checkbox_on.png);
 }
 
 .list-manufacturers input[type=checkbox]:checked:focus+label::before {
@@ -2269,14 +2282,10 @@ img {
 	position: absolute;
 	width: 60px;
 	left: 287px;
-	bottom: 33px;
+	bottom: 34px;
 }
 
-.wrap-slider-radio label {
-	margin-left: 7px;
-}
-
-.wrap-slider-radio input[type=radio]+label {
+.wrap-slider-radio button {
 	position: relative;
 	display: inline-block;
 	vertical-align: middle;
@@ -2284,24 +2293,25 @@ img {
 	height: 10px;
 }
 
-.wrap-slider-radio input[type=radio]:focus+label::before {
-	outline: 5px auto -webkit-focus-ring-color;
-	outline-offset: -2px;
+.slider-radio-1, .slider-radio-2 {
+	border: none;
+	padding: 0;
+	border-radius: 10px;
 }
 
-.wrap-slider-radio input[type=radio]+label::before {
-	position: absolute;
-	content: "";
-	width: 10px;
-	height: 10px;
+.slider-radio-1 {
+	margin-left: 8px;
+}
+
+.slider-radio-2 {
+	margin-left: 6px;
+}
+
+.slider-radio-1, .slider-radio-2 {
 	background-image: url(../img/slider_radio_off.png);
 }
 
-.wrap-slider-radio input[type=radio]:checked+label::before {
-	position: absolute;
-	content: "";
-	width: 10px;
-	height: 10px;
+.slider-radio-active {
 	background-image: url(../img/slider_radio_on.png);
 }
 
@@ -2509,7 +2519,6 @@ img {
 	width: 220px;
 	min-height: 170px;
 	text-align: center;
-	line-height: 170px;
 	order: -1;
 }
 
